# neucomm

./: MANIFEST.in  Makefile  README.md  basic_func.c  basic_func.h  common.c  common.h  neucomm.c  pyproject.toml  setup.py
neucomm/: __init__.py  __init__.pyi  _core.c  accelerators.c  accelerators.h  basic_func.c  basic_func.h  common.c  common.h  convoluted.c  convoluted.h  detectors.c  detectors.h  neutrino_flux.c  neutrino_flux.h
neucomm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
neucomm/Finalis/: water_expectation.c  water_expectation.h
neucomm/codes/: codes.c  codes.h  convoluted.c  convoluted.h  rs.c
