[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "neucomm"
version = "0.1.1"
description = "Neutrino communication utilities"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["neucomm*"]

[tool.setuptools.package-data]
neucomm = ["*.pyi"]